--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </tr>
             <tr>
                 <td bgcolor="FFA07A"align="lef"><b><FONT COLOR="White">NOMBRE</FONT></b></td>
-                <td align="lef">DUNIA ELIZABETH MÉNDEZ MÁRQUEZ/td>
+                <td align="lef">DUNIA ELIZABETH MÉNDEZ MÁRQUEZ</td>
                 <td bgcolor="FFA07A"align="center"rowspan=3 colspan=3><b><FONT COLOR="White">OBSERVACIÓN<br>(SIN NINGUNA OBSERVACIÓN)</FONT></b></td>
             </tr>
             <tr>
